Specify raml2html version

--- a/raml2html/3.0/Dockerfile
+++ b/raml2html/3.0/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:slim
 
-ENV RAML2HTML_VERSION 3.0.x
+ENV RAML2HTML_VERSION 3.0.0
 
 RUN npm install --global "raml2html@${RAML2HTML_VERSION}"
 
