--- a/localapi/1.6/Dockerfile
+++ b/localapi/1.6/Dockerfile
@@ -2,7 +2,7 @@ FROM node:slim
 
 ENV LOCALAPI_VERSION 1.6.0
 
-RUN npm install --global "localapi@${RAML2HTML_VERSION}"
+RUN npm install --global "localapi@${LOCALAPI_VERSION}"
 
 RUN mkdir -p /data
 VOLUME /data
