--- a/localapi/1.6/Dockerfile
+++ b/localapi/1.6/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:slim
 
+RUN apt-get update && apt-get install -y \
+    git \
+  && rm -rf /var/lib/apt/lists/*
+
 ENV LOCALAPI_VERSION 1.6.0
 
 RUN npm install --global "localapi@${LOCALAPI_VERSION}"
