Add request module to Abao image

--- a/abao/0.4/Dockerfile
+++ b/abao/0.4/Dockerfile
@@ -3,6 +3,7 @@ FROM node:slim
 ENV ABAO_VERSION ^0.4.0-beta
 
 RUN npm install --global "abao@${ABAO_VERSION}"
+RUN npm install --global "request"
 
 RUN mkdir -p /data
 VOLUME /data
