Update NODE_PATH in Abao image

--- a/abao/0.4/Dockerfile
+++ b/abao/0.4/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:slim
 
 ENV ABAO_VERSION ^0.4.0-beta
+ENV NODE_PATH="/usr/local/lib/:${NODE_PATH}" 
 
 RUN npm install --global "abao@${ABAO_VERSION}"
 RUN npm install --global "request"
